--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  scroll-behavior: smooth;
 }
 
 .w-full {
@@ -17,11 +18,16 @@ body {
 
 a {
   text-decoration: none;
+  color: black;
 }
 .container {
   width: 90%;
   margin: auto;
   padding: 0px 1rem;
+}
+
+.active-nav {
+  color: orangered;
 }
 
 .header-btns svg {
